refactor: monolothic